--- a/package.json
+++ b/package.json
@@ -16,8 +16,17 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "gyp": "^0.5.0",
+    "har-validator": "^5.1.5",
     "mongoose": "^6.0.14",
+    "node": "^17.2.0",
+    "node-gyp": "^8.4.1",
+    "node-sass": "^6.0.0",
+    "npm": "^8.3.0",
     "passport": "^0.5.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "request": "^2.88.2",
+    "tar": "^6.1.11",
+    "uuid": "^8.3.2"
   }
 }
