--- a/package.json
+++ b/package.json
@@ -13,19 +13,25 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
     "gyp": "^0.5.0",
     "har-validator": "^5.1.5",
+    "jsonwebtoken": "^8.5.1",
+    "kue": "^0.11.6",
     "mongoose": "^6.0.14",
     "multer": "^1.4.4",
     "node": "^17.2.0",
     "node-gyp": "^8.4.1",
     "node-sass": "^6.0.0",
+    "nodemailer": "^6.7.2",
     "npm": "^8.3.0",
     "passport": "^0.5.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "request": "^2.88.2",
     "tar": "^6.1.11",
